変更しました

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,6 +1,3 @@
-!!!
-
-
 .main-chat
   .main-header
     .main-header__box
@@ -24,4 +21,4 @@
           %input.input-image{type: "file"}
       .form-box__send-btn
         %button.input-send{ :name => "send", :type => "button", :onclic => ""}/
-        send
+        Send
