--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -1,6 +1,3 @@
-@import "./main_color";
-
-
 .wrapper{
   display: flex;
     .side-chat{
@@ -56,8 +53,6 @@
          padding: 0 40px 0;
          height: 100px;
          border-bottom: solid 1px #eeeeee;
-         &__box {
-         }
          &__box__name {
            padding: 35px 0 15px;
            font-size: 20px;
@@ -111,7 +106,7 @@
       height: 90px;
       position:fixed;
       bottom: 0;
-      width: 100%;
+      width: 100vw;
       .form-box{
         padding: 10px;
         display: flex;
@@ -143,10 +138,11 @@
           background-color: #38AEF0;
           color: $White;
           position: relative;
-          top: 8px;
+          top: 1px;
           left: 60px;
-          height: 40px;
-          width: 70px;
+          height: 50px;
+          width: 100px;
+          font-size: 15px;
         }
       }
        }
