追加しました

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,14 +1,13 @@
-!!!
-
 .side-chat
   .header
     .header__box
-      .header__name name
+      .header__name 
+        = current_user.name
       .header__icon
         %ul
           = link_to "#" do
             %i.ffas.fa-edit
-          = link_to "#" do
+          = link_to edit_user_path(current_user) do
             %i.fa.fa-cog
   .groups
     .groups__box
