--- a/app/assets/stylesheets/_main_color.scss
+++ b/app/assets/stylesheets/_main_color.scss
@@ -1,3 +1,11 @@
 $White: #ffff;
 $mainGray: #999999;
 $blue: #25dce9;
+
+$white: #fff;
+$side_blue_dark: #253141;
+$side_blue_light: #2f3e51;
+$light_blue: #38AEF0;
+$light_gray: #999;
+$black: #434a54;
+$alert_orange: #F35500;
