--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -121,16 +121,18 @@
         .input-message{
           height: 50px;
           padding: 0 10px;
-          width: 100%;
+          width: 70vw;
         }
         label{
           position: relative;
-          bottom: 35px;
-          left: 475px;
+          top: 0;
+          right: 50px;
           z-index: 1;
+          cursor: pointer;
         }
         .input-image{
           visibility:hidden;
+          width: 1%;
         }
        }
       &__send-btn{
@@ -139,10 +141,11 @@
           color: $White;
           position: relative;
           top: 1px;
-          left: 60px;
+          right: 250px;
           height: 50px;
           width: 100px;
           font-size: 15px;
+          cursor: pointer;
         }
       }
        }
