--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -3,23 +3,21 @@
     .main-header__box
       .main-header__box__name
         = @group.name
-      .main-header__box__menber-list menber-list:
+      .main-header__box__menber-list Member:
       - @group.users.each do |user|
         .main-header__box__menber-list__menber
           = user.name
-    = link_to edit_group_path(@group) do
-      .main-header__edit-btn Edit
+    .main-header__edit-btn
+      = link_to 'Edit', edit_group_path(@group), class: 'btn'
 
   .messages
     = render @messages
 
   .form
-    .form-box
-      .form-box__tag
-        = form_for [@group, @message] do |f|
-          = f.text_field :content, class: 'input-message', placeholder: 'type a message'
-          = f.label :image, class: 'input-box__image' do
-            = icon('fas', 'image')
-            = f.file_field :image, class: 'input-image'
-          .form-box__send-btn
-            = f.submit 'Send', class: 'input-send'
+    = form_for [@group, @message] do |f|
+      .input-box
+        = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+        = f.label :image, class: 'input-box__image' do
+          = fa_icon 'image'
+          = f.file_field :image, class: 'input-box__image__file'
+        = f.submit 'Send', class: 'input-send'
