--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "./reset";
-@import "font-awesome-sprockets";
+// @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "./main_color";
 @import "./posts";
