--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -132,6 +132,7 @@
           position: relative;
           bottom: 20px;
           right: 20px;
+          display: flex;
         &__name{
           padding-bottom: 10px;
           font-size: 16px;
@@ -142,9 +143,9 @@
           font-size: 12px;
           color: $mainGray;
           padding: 0 10px;
-          position: relative;
-          left: 40px;
-          bottom: 25px;
+          // position: relative;
+          // left: 40px;
+          // bottom: 25px;
         }
         &__message{
           font-size: 14px;
