--- a/app/assets/stylesheets/_flash.scss
+++ b/app/assets/stylesheets/_flash.scss
@@ -1,13 +1,15 @@
 .notification {
+  color: $white;
+  text-align: center;
   .notice {
     background-color: $light_blue;
-    color: $white;
-    text-align: center;
+    // color: $white;
+    // text-align: center;
   }
 
   .alert {
     background-color: $alert_orange;
-    color: $white;
-    text-align: center;
+    // color: $white;
+    // text-align: center;
   }
 }
