--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,12 @@
 // @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "./main_color";
-@import "./posts";
-@import "./user";
-@import "./flash";
-@import "./group";
+@import "./mixin";
+// @import "./posts";
+// @import "./user";
+// @import "./flash";
+// @import "./group";
+// @import "./test";
+// @import "./footer";
+// @import "./btn";
+@import "./product";
