--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,2 +1,4 @@
 .wrapper
   = render "messages/side_bar.html.haml"
+  //= render "messages/product.html.haml"
+  //= render "messages/header.html.haml"
