--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,21 +1,21 @@
-.side-chat
-  .header
-    .header__box
-      .header__name 
-        = current_user.name
-      .header__icon
-        %ul
-          = link_to new_group_path(current_user) do
-            -# %i.fas.fa-edit
-            = fa_icon 'edit', class: 'icon'
-          = link_to edit_user_path(current_user) do
-            -# %i.fa.fa-cog
-            = fa_icon 'cog', class: 'icon'
-  .groups
-    - current_user.groups.each do |group|
-      .groups__box
-        = link_to group_messages_path(group) do
-          .groups__name
-            = group.name
-          .groups__message
-            = group.show_last_message
+-# .side-chat
+-#   .header
+-#     .header__box
+-#       .header__name 
+-#         = current_user.name
+-#       .header__icon
+-#         %ul
+-#           = link_to new_group_path(current_user) do
+-#             -# %i.fas.fa-edit
+-#             = fa_icon 'edit', class: 'icon'
+-#           = link_to edit_user_path(current_user) do
+-#             -# %i.fa.fa-cog
+-#             = fa_icon 'cog', class: 'icon'
+-#   .groups
+-#     - current_user.groups.each do |group|
+-#       .groups__box
+-#         = link_to group_messages_path(group) do
+-#           .groups__name
+-#             = group.name
+-#           .groups__message
+-#             = group.show_last_message
