--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,3 +1,7 @@
 .wrapper
+  -# = render "test.html.haml"
   = render "side_bar.html.haml"
-  = render "main_chat.html.haml"
+  -# = render "main_chat.html.haml"
+  = render "product.html.haml"
+  //= render "messages/header.html.haml"
+  
