--- a/app/assets/stylesheets/_product.scss
+++ b/app/assets/stylesheets/_product.scss
@@ -163,6 +163,9 @@ a{
           width: 400px;
           margin: 0;
         }
+        .product__category__group{
+          margin-bottom: 28px;
+        }
         .require{
           background: #ea352d;
           margin: 0 0 0 8px;
@@ -210,7 +213,7 @@ a{
           border: 1px solid #ccc;
           background: #fff;
           line-height: 1.5;
-          margin-bottom: 28px;
+          // margin-bottom: 28px;
         }
         .select-box.box::before{
           position: absolute;
@@ -245,6 +248,9 @@ a{
           width: 400px;
           margin: 0;
         }
+        .product__category__group{
+          margin-bottom: 28px;
+        }
         .require{
           background: #ea352d;
           margin: 0 0 0 8px;
@@ -292,7 +298,7 @@ a{
           border: 1px solid #ccc;
           background: #fff;
           line-height: 1.5;
-          margin-bottom: 28px;
+          // margin-bottom: 28px;
         }
         .select-box.box::before{
           position: absolute;
@@ -317,6 +323,64 @@ a{
         content: "";
         display: block;
         clear: both;
+      }
+      .price{
+        padding: 0 0 24px;
+        // border-bottom: 1px, solid, #888;
+        &__box{
+          // border-bottom: 1px, solid, #888;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          .price_textbox{
+            // width: 50%;
+            justify-content: flex-end;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            .price_text{
+              width: 75%;
+              text-align: right;
+              height: 48px;
+              border-radius: 4px;
+              border: 1px solid #ccc;
+              background: #fff;
+              line-height: 1.5;
+              font-size: 16px;
+              box-sizing: border-box;
+              padding: 10px 16px 8px;
+              margin-left: 10px;
+            }
+          }
+        }
+      }
+      .price_tax{
+        padding: 24px 0;
+        border-top: 1px solid #ccc;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .tax_tittle{
+          font-size: 14px;
+          float: left;
+        }
+        .tax_price{
+          
+        }
+      }
+      .price_tax_profit{
+        padding: 24px 0;
+        border-top: 1px solid #ccc;
+        font-weight: bold;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .profit_tittle{
+          float: left;
+        }
+        .profit_price{
+          float: right;
+        }
       }
       .sell-content__form__btn{
         border-top: 1px solid #eee;
