--- a/app/views/messages/_product.html.haml
+++ b/app/views/messages/_product.html.haml
@@ -39,78 +39,141 @@
             %h3.index__tittle
               商品の詳細
             .index__box
-              .product__category__group
+              .product__category
               %label
                 カテゴリー
                 %span.require 必須
-              %div.select-box.box
-                %select#select1{:onchange => "selectboxChange();"}
+              %div.select-box.box{:action => "", :name => "form1"}
+                %select#select1
                   %option{:value => ""} ---
-                  %option{:value => "1"} 要素1
-                  %option{:value => "2"} 要素2
-                  %option{:value => "3"} 要素3
-                  %option{:value => "4"} 要素4
-                  %option{:value => "5"} 要素5
+                  %option{:value => "1"} レディース
+                  %option{:value => "2"} メンズ
+                  %option{:value => "3"} ベビー・キッズ
+                  %option{:value => "4"} インテリア・住まい・小物
+                  %option{:value => "5"} 本・音楽・ゲーム
+                  %option{:value => "6"} おもちゃ・ホビー・グッズ
+                  %option{:value => "7"} コスメ・香水・美容
+                  %option{:value => "8"} 家電・スマホ・カメラ
+                  %option{:value => "9"} スポーツ・レジャー
+                  %option{:value => "10"} ハンドメイド
+                  %option{:value => "11"} チケット
+                  %option{:value => "12"} 自転車・オートバイ
+                  %option{:value => "13"} その他
+              %div#add
               .product__category__group
               %label
                 商品の状態
                 %span.require 必須
               %div.select-box.box
-                %select#select1{:onchange => "selectboxChange();"}
+                %select#select1
                   %option{:value => ""} ---
-                  %option{:value => "1"} 要素1
-                  %option{:value => "2"} 要素2
-                  %option{:value => "3"} 要素3
-                  %option{:value => "4"} 要素4
-                  %option{:value => "5"} 要素5
+                  %option{:value => "1"} 新品、未使用
+                  %option{:value => "2"} 未使用に近い
+                  %option{:value => "3"} 目立った傷や汚れなし
+                  %option{:value => "4"} やや傷や汚れあり
+                  %option{:value => "5"} 傷や汚れあり
+                  %option{:value => "5"} 全体的に状態が悪い
           .sell-content__derivery.clearfix
             %h3.index__tittle
               配送について
             .index__box
-              .product__category__group
+              .product__category
               %label
                 配送料の負担
                 %span.require 必須
               %div.select-box.box
-                %select#select1{:onchange => "selectboxChange();"}
+                %select#select1
                   %option{:value => ""} ---
-                  %option{:value => "1"} 要素1
-                  %option{:value => "2"} 要素2
-                  %option{:value => "3"} 要素3
-                  %option{:value => "4"} 要素4
-                  %option{:value => "5"} 要素5
+                  %option{:value => "1"} 送料込み(出品者負担)
+                  %option{:value => "2"} 着払い(購入者負担)
               .product__category__group
               %label
                 発送元の地域
                 %span.require 必須
               %div.select-box.box
-                %select#select1{:onchange => "selectboxChange();"}
+                %select#select1
                   %option{:value => ""} ---
-                  %option{:value => "1"} 要素1
-                  %option{:value => "2"} 要素2
-                  %option{:value => "3"} 要素3
-                  %option{:value => "4"} 要素4
-                  %option{:value => "5"} 要素5
+                  %option{:value => "1"} 北海道
+                  %option{:value => "2"} 青森県
+                  %option{:value => "3"} 岩手県
+                  %option{:value => "4"} 宮城県
+                  %option{:value => "5"} 秋田県
+                  %option{:value => "1"} 山形県
+                  %option{:value => "2"} 福島県
+                  %option{:value => "3"} 茨城県
+                  %option{:value => "4"} 栃木県
+                  %option{:value => "5"} 群馬県
+                  %option{:value => "1"} 埼玉県
+                  %option{:value => "2"} 千葉県
+                  %option{:value => "3"} 東京都
+                  %option{:value => "4"} 神奈川県
+                  %option{:value => "5"} 新潟県
+                  %option{:value => "1"} 富山県
+                  %option{:value => "2"} 石川県
+                  %option{:value => "3"} 福井県
+                  %option{:value => "4"} 山梨県
+                  %option{:value => "5"} 長野県
+                  %option{:value => "1"} 岐阜県
+                  %option{:value => "2"} 静岡県
+                  %option{:value => "3"} 愛知県
+                  %option{:value => "4"} 三重県
+                  %option{:value => "5"} 滋賀県
+                  %option{:value => "1"} 京都府
+                  %option{:value => "2"} 大阪府
+                  %option{:value => "3"} 兵庫県
+                  %option{:value => "4"} 奈良県
+                  %option{:value => "5"} 和歌山県
+                  %option{:value => "1"} 鳥取県
+                  %option{:value => "2"} 島根県
+                  %option{:value => "3"} 岡山県
+                  %option{:value => "4"} 広島県
+                  %option{:value => "5"} 山口県
+                  %option{:value => "1"} 徳島県
+                  %option{:value => "2"} 香川県
+                  %option{:value => "3"} 愛媛県
+                  %option{:value => "4"} 高知県
+                  %option{:value => "5"} 福岡県
+                  %option{:value => "3"} 佐賀県
+                  %option{:value => "4"} 長崎県
+                  %option{:value => "5"} 熊本県
+                  %option{:value => "1"} 大分県
+                  %option{:value => "2"} 宮城県
+                  %option{:value => "3"} 鹿児島県
+                  %option{:value => "4"} 沖縄県
+                  %option{:value => "5"} 未定
               .product__category__group
               %label
                 発送までの日数
                 %span.require 必須
               %div.select-box.box
-                %select#select1{:onchange => "selectboxChange();"}
+                %select#select1
                   %option{:value => ""} ---
-                  %option{:value => "1"} 要素1
-                  %option{:value => "2"} 要素2
-                  %option{:value => "3"} 要素3
-                  %option{:value => "4"} 要素4
-                  %option{:value => "5"} 要素5
+                  %option{:value => "1"} 1~2日で発送
+                  %option{:value => "2"} 2~3日で発送
+                  %option{:value => "3"} 4~7日で発送
           .sell-content__index.clearfix
             %h3.index__tittle
               販売価格(300~9,999,999)
             .index__box
-              .product__category__group
-              %label
-                価格
-                %span.require 必須
+              %ul.product__category__group
+                %li.price
+                  .price__box
+                    %label
+                      価格
+                      %span.require 必須
+                    %div.price_textbox
+                      ¥
+                      = f.text_field :image, class: 'price_text', id: 'id',placeholder: '例)300'
+                %li.price_tax
+                  .tax_tittle
+                    販売手数料(10%)
+                  .tax_price#tax
+                    = "-"
+                %li.price_tax_profit
+                  .profit_tittle
+                    販売利益
+                  .profit_price#profit
+                    = "--"
           .sell-content__form__btn
             %div
               %p 禁止されている出品、行為を必ずご確認ください。
